Mobile slider and refactoring

--- a/index.html
+++ b/index.html
@@ -29,36 +29,52 @@
             <div class="content">
                 <nav class="slideshow">
                     <h2 class="visually-hidden">Slideshow</h2>
-                    <ol class="slideshow__inner">
+                    <ol class="slideshow__inner | js-slideshow">
                         <li class="slide | js-slide">
-                            <img src="dist/img/temp/woods/base.jpg" crossorigin="anonymous" draggable="false">
+                            <img src="dist/img/portraits/01.jpg" crossorigin="anonymous" draggable="false">
                             <h3>Urban style</h3>
                         </li>
                         <li class="slide | js-slide">
-                            <img src="dist/img/temp/woods/base.jpg" crossorigin="anonymous" draggable="false">
-                            <h3>Urban style</h3>
+                            <img src="dist/img/portraits/02.jpg" crossorigin="anonymous" draggable="false">
+                            <h3>Tokyo Rules</h3>
                         </li>
                         <li class="slide | js-slide">
-                            <img src="dist/img/temp/woods/base.jpg" crossorigin="anonymous" draggable="false">
-                            <h3>Urban style</h3>
+                            <img src="dist/img/portraits/03.jpg" crossorigin="anonymous" draggable="false">
+                            <h3>Under ground</h3>
+                        </li>
+                        <li class="slide | js-slide">
+                            <img src="dist/img/portraits/04.jpg" crossorigin="anonymous" draggable="false">
+                            <h3>Minimal cities</h3>
+                        </li>
+                        <li class="slide | js-slide">
+                            <img src="dist/img/portraits/05.jpg" crossorigin="anonymous" draggable="false">
+                            <h3>Incog nito</h3>
+                        </li>
+                        <li class="slide | js-slide">
+                            <img src="dist/img/portraits/06.jpg" crossorigin="anonymous" draggable="false">
+                            <h3>Green woods</h3>
                         </li>
                     </ol>
                 </nav>
                 <div aria-hidden="true">
                     <span class="title | split">
-                        <span class="split__current">URB</span><span class="split__next"></span>
+                        <span class="split__text | js-splited-text">URB</span>
                     </span>
                     <span class="title | split">
-                        <span class="split__current">AN</span><span class="split__next"></span>
+                        <span class="split__text | js-splited-text">AN</span>
                     </span>
                     <span class="title | split">
-                        <span class="split__current">STY</span><span class="split__next"></span>
+                        <span class="split__text | js-splited-text">STY</span>
                     </span>
                     <span class="title | split">
-                        <span class="split__current">LE</span><span class="split__next"></span>
+                        <span class="split__text | js-splited-text">LE</span>
                     </span>
                 </div>
                 <canvas id="stage"></canvas>
+                <div class="slideshow__circles">
+                    <div class="circle"></div>
+                    <div class="circle"></div>
+                </div>
             </div>
         </main>
         <!--script src="https://tympanus.net/codrops/adpacks/demoad.js"></script-->
