Change the name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Physical 3D cloth with Three.js and Cannon.js | Codrops</title>
+        <title>Physics 3D cloth with Three.js and Cannon.js | Codrops</title>
         <meta name="description" content="" />
         <meta name="keywords" content="" />
         <meta name="author" content="Arno Di Nunzio" />
@@ -17,7 +17,7 @@
         <main>
             <div class="frame">
                 <div class="frame__title-wrap">
-                    <h1 class="frame__title">Physical 3D cloth</h1>
+                    <h1 class="frame__title">Physics 3D cloth</h1>
                     <p class="frame__tagline">with <a href="https://threejs.org" target="_blank" rel="noopener">Three.js</a> & <a href="https://github.com/schteppe/cannon.js" rel="noopener" target="_blank">Cannon.js</a></p>
                     <div class="frame__links">
                         <a href="">Previous Demo</a>
